[package]
name = "ic_rand"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "random number generator developed by ShikuLabs that can compiled on IC"
repository = "https://github.com/ShikuLabs"
documentation = "https://docs.rs/shiku_rand"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
